--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -7,7 +7,7 @@ update_date: "Sat, 30 Sep 2023 11:41:38 UTC"
 stages:
   - id: 2166
     step: 30563
-    is_completed: false
+    is_completed: true
   - id: 2167
     step: 30564
     is_completed: false
